--- a/Views/RegisterUser/Register.cshtml
+++ b/Views/RegisterUser/Register.cshtml
@@ -1,12 +1,8 @@
-﻿@page
-@model healthcare_system.ViewModels.PatientViewModel
-@{
-    
-}
+﻿@model healthcare_system.ViewModels.PatientViewModel
 
 <h2>Create New patient</h2>
 
-<form asp-asp-controller="Registration" asp-action="Create" method="post">
+<form asp-controller="RegisterUser" asp-action="Create" method="post">
     <div>
         <label asp-for="FirstName"></label>
         <input asp-for="FirstName" class="form-control" />
@@ -37,7 +33,15 @@
         <input asp-for="Sex" class="form-control" />
         <span asp-validation-for="Sex"></span>
     </div>
-
-
-    <button type="submit">Submit form</button>
+    <div>
+        <label asp-for="EmailAddress"></label>
+        <input asp-for="EmailAddress" class="form-control" />
+        <span asp-validation-for="EmailAddress"></span>
+    </div>
+    <div>
+        <label asp-for="PhoneNumber"></label>
+        <input asp-for="PhoneNumber" class="form-control" />
+        <span asp-validation-for="PhoneNumber"></span>
+    </div>
+    <button type="submit" class="btn-primary">Submit form</button>
 </form>
