--- a/Views/LoginDoctor/Login.cshtml
+++ b/Views/LoginDoctor/Login.cshtml
@@ -1,5 +1,8 @@
-﻿@model healthcare_system.ViewModels.DoctorLoginViewModel
-
+﻿@using healthcare_system.ViewModels;
+@model healthcare_system.ViewModels.DoctorLoginViewModel
+@{
+   var doctor = ViewData["DoctorLoginViewModel"] as DoctorLoginViewModel;
+}
 
 <h2>Doctor Login</h2>
 
@@ -14,6 +17,13 @@
         <label asp-for="Password"></label>
         <input asp-for="Password" type="password" class="form-controller" />
         <span asp-validation-for="Password"></span>
+    </div>
+    <div class="form group">
+        @if(doctor!=null)
+        {
+            <h6>@doctor.WrongInput</h6>
+        }
+        
     </div>
     <button type="submit">Log in</button>
 
