--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,23 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<body class="home">
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <h2>Hello world</h2>
+
+
+    <div class="container mt-5 ">
+        <div class="jumbotron">
+            <br />
+                <br />
+                <br />
+                <br />
+                <br />
+            <h1 class="display-4 bold">Dobrodošli v Zdravstvenih Storitvah</h1>
+            <p class="lead">Naša storitev vam omogoča, da enostavno upravljate svoje zdravstvene podatke in recepte.</p>
+            <hr class="my-4">
+            <p>Prijava v svoj račun in začnite uporabljati naše storitve.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Prijava</a>
+        </div>
+    </div>
 </div>
+</body>
