--- a/Views/Reservation/NewReservation.cshtml
+++ b/Views/Reservation/NewReservation.cshtml
@@ -6,9 +6,9 @@
 <form asp-controller="Reservation" asp-action="NewReservation" method="post">
 
     <div class="form group">
-        <label asp-for="Doctor.DoctorId"></label>
-        <input asp-for="Doctor.DoctorId" class="form-controller" />
-        <span asp-validation-for="Doctor.DoctorId"></span>
+        <label asp-for="Doctor.Id"></label>
+        <input asp-for="Doctor.Id" class="form-controller" />
+        <span asp-validation-for="Doctor.Id"></span>
     </div>
     <div class="form group">
         <label asp-for="Patient.PatientId"></label>
