Modified models for 2 different authentication roles(patient, doctor)

--- a/Views/Patient/Index.cshtml
+++ b/Views/Patient/Index.cshtml
@@ -14,7 +14,7 @@
         @foreach (var patient in Model)
         {
             <tr>
-                <td>@patient.PatientId</td>
+                <td>@patient.Id</td>
                 <td>@patient.FirstName</td>
                 <td>@patient.LastName</td>
             </tr>
