--- a/Views/Reservation/EditReservation.cshtml
+++ b/Views/Reservation/EditReservation.cshtml
@@ -39,7 +39,7 @@
                     </tr>
                     <tr>
                         <td class="fw-bold">Email:</td>
-                        <td>@Model.patient.EmailAddress</td>
+                        <td>@Model.patient.Email</td>
                     </tr>
                     <tr>
                         <td class="fw-bold">Starost:</td>
