--- a/Views/Patient/Index.cshtml
+++ b/Views/Patient/Index.cshtml
@@ -11,13 +11,13 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var patient in Model)
+         @*@foreach (var patient in Model)
         {
             <tr>
                 <td>@patient.Id</td>
                 <td>@patient.FirstName</td>
                 <td>@patient.LastName</td>
             </tr>
-        }
+        } *@
     </tbody>
 </table>
