--- a/Views/Reservation/EditReservation.cshtml
+++ b/Views/Reservation/EditReservation.cshtml
@@ -35,15 +35,15 @@
                 <table class="table table-bordered">
                     <tr>
                         <td class="fw-bold">Ime in Priimek:</td>
-                        <td>@Model.patient.FirstName @Model.patient.LastName</td>
+                        @*<td>@Model.patient.FirstName @Model.patient.LastName</td>*@
                     </tr>
                     <tr>
                         <td class="fw-bold">Email:</td>
-                        <td>@Model.patient.Email</td>
+                        @*<td>@Model.patient.Email</td>*@
                     </tr>
                     <tr>
                         <td class="fw-bold">Starost:</td>
-                        <td>@Model.patient.Age</td>
+                        @*<td>@Model.patient.Age</td>*@
                     </tr>
                 </table>
             </div>
@@ -53,11 +53,11 @@
                 <table class="table table-bordered">
                     <tr>
                         <td class="fw-bold">Ime in Priimek:</td>
-                        <td>@Model.doctor.FirstName @Model.doctor.LastName</td>
+                        @*<td>@Model.doctor.FirstName @Model.doctor.LastName</td>*@
                     </tr>
                     <tr>
                         <td class="fw-bold">Email:</td>
-                        <td>@Model.doctor.Email</td>
+                        @*<td>@Model.doctor.Email</td>*@
                     </tr>
                     <tr>
                         <td class="fw-bold">Oddelek ID:</td>
