--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using healthcare_system.Models
 
-@inject SignInManager<Doctor> SignInManager
-@inject UserManager<Doctor> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -20,10 +20,16 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/DoctorManager/Register">Register(Doctor)</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/DoctorManager/Login">Login(Doctor)</a>
     </li>
+    /*<li class="nav-item">
+        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/PatientManager/Register">Register(Patient)</a>
+    </li>
+    <li class="nav-item">
+       <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/PatientManager/Login">Login(Patient)</a>
+    </li> */
 }
 </ul>
